--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -285,7 +285,7 @@ input, select, textarea {
 	hr {
 		border: 0;
 		border-bottom: solid 1px #ffffff;
-		margin: 2.75rem 0;
+		margin: 1.5rem 0 2.5rem 0;
 	}
 
 	.align-left {
@@ -915,7 +915,6 @@ input, select, textarea {
 
 			ul.icons li a {
 				border-radius: 100%;
-				box-shadow: inset 0 0 0 1px #ffffff;
 				display: inline-block;
 				height: 2.25rem;
 				line-height: 2.25rem;
@@ -923,13 +922,38 @@ input, select, textarea {
 				width: 2.25rem;
 			}
 
-				ul.icons li a:hover {
-					background-color: rgba(255, 255, 255, 0.075);
+				ul.icons #linkedin a {
+					background:  #0e76a8;
 				}
+					ul.icons #linkedin a:hover {
+						background: rgba(255, 255, 255, 0.075);
+						box-shadow: inset 0 0 0 1px  white;
+					}
+					ul.icons #linkedin a:active {
+						background-color: rgba(255, 255, 255, 0.175);
+					}
+					
+				ul.icons #facebook a {
+					background:  #3b5998;
+				}
+					ul.icons #facebook a:hover {
+						background: rgba(255, 255, 255, 0.075);
+						box-shadow: inset 0 0 0 1px  white;
+					}
+					ul.icons #facebook a:active {
+						background-color: rgba(255, 255, 255, 0.175);
+					}
 
-				ul.icons li a:active {
-					background-color: rgba(255, 255, 255, 0.175);
+				ul.icons #github a {
+					background: #6e5494;
 				}
+					ul.icons #github a:hover {
+						background: rgba(255, 255, 255, 0.075);
+						box-shadow: inset 0 0 0 1px  white;
+					}
+					ul.icons #github a:active {
+						background-color: rgba(255, 255, 255, 0.175);
+					}
 
 /* Table */
 
@@ -1546,7 +1570,7 @@ input, select, textarea {
 			-webkit-transition: opacity 0.325s ease-in-out, -webkit-transform 0.325s ease-in-out;
 			-ms-transition: opacity 0.325s ease-in-out, -ms-transform 0.325s ease-in-out;
 			transition: opacity 0.325s ease-in-out, transform 0.325s ease-in-out;
-			padding: 4.5rem 2.5rem 1.5rem 2.5rem ;
+			padding: 4.5rem 2.5rem 2.5rem 2.5rem ;
 			position: relative;
 			width: 40rem;
 			max-width: 100%;
@@ -1675,7 +1699,7 @@ input, select, textarea {
 	}	
 
 	.card {
-		padding: 0 10px;
+		padding: 0;
 		margin: 0;
 		width: 10rem;
 		height: 150px;
@@ -1688,8 +1712,7 @@ input, select, textarea {
 	}
 
 	.card-icon {
-		font-size: 25px;
-		background:  #57606f;
+		font-size: 40px;
 		width: 60px;
 		height: 60px;
 		text-align: center;
@@ -1700,16 +1723,15 @@ input, select, textarea {
 
 	.card:hover .card-icon{
 		background: none;
-		transform: scale(1.6);
+		transform: scale(1.1);
 	}
 
 	.card #ptagcontact{
-		margin-top: 20px;
+		margin-top: 8px;
 		font-weight: 300;
-		font-size: 15px;
+		font-size: 13px;
 		letter-spacing: 2px;
 		max-height: 0;
-		opacity: 0;
 		transition: 0.3s linear;
 	}
 
@@ -1718,7 +1740,12 @@ input, select, textarea {
 		opacity: 1;
 	}
 
-	@media screen and (max-width:800px) {
+	#icon-header {
+		text-transform: uppercase;
+		text-align: center;
+	}
+
+	@media screen and (max-width:700px) {
 		.contact-info{
 			flex-direction: column;	
 		}
