--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1767,6 +1767,59 @@ input, select, textarea {
 		}
 	}
 
+/*Skills - My edits*/
+
+.skill-row {
+	padding: 15px 20px;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	max-width: 100;
+	border-radius: 2%;
+	border: #ffffff solid 1;
+}
+
+.skill-image {
+	display: flex;
+	justify-content: center;
+	max-width: 12%;
+}
+
+/*.points {
+	background: red;
+	width: 400px;
+	height: 60px;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	padding: 0 10px;
+}*/
+
+ul.skills {
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	padding-left: 0;
+	margin-bottom: 0;
+	width: 420px;
+	height: 60px;
+}
+
+li.skill-li {
+	list-style: none;
+	padding-left: 0;
+	flex: 1;
+	display: flex;
+	justify-content: center;
+	font-size: 48px;
+	text-shadow: 0 0 1.5px white;
+}
+	#point-four,
+	#point-five {
+		opacity: 1;            
+		color: rgba(0, 0, 0, 0.75);
+	}
+
 
 
 
