Rough Draft Skill Row 2

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1775,8 +1775,6 @@ input, select, textarea {
 	justify-content: space-evenly;
 	align-items: center;
 	max-width: 100;
-	border-radius: 2%;
-	border: #ffffff solid 1;
 }
 
 .skill-image {
@@ -1797,21 +1795,18 @@ input, select, textarea {
 
 ul.skills {
 	display: flex;
+	flex-wrap: nowrap;
 	justify-content: space-evenly;
 	align-items: center;
 	padding-left: 0;
 	margin-bottom: 0;
-	width: 420px;
-	height: 60px;
+	
 }
 
 li.skill-li {
 	list-style: none;
 	padding-left: 0;
-	flex: 1;
-	display: flex;
-	justify-content: center;
-	font-size: 48px;
+	font-size: 4vw;
 	text-shadow: 0 0 1.5px white;
 }
 	#point-four,
@@ -1819,6 +1814,62 @@ li.skill-li {
 		opacity: 1;            
 		color: rgba(0, 0, 0, 0.75);
 	}
+	#point-one,
+	#point-two,
+	#point-three {
+		color: #f5f058;
+		border-color: white;
+	}
+
+/*2nd Rough Draft Skill Bar*/
+.sk-container {
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: space-between;
+	align-items: center;
+	padding: 20px 10%;
+}
+
+.sk-container img {
+	width: 50px;
+	height: 60px;
+	display: flex;
+	align-self: center;
+}
+
+.sk-bar {
+	background: lightpink;
+	border-radius: 3.5px;
+	width: 100%;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+
+ul.sk-points {
+	margin: 0;
+	width: 100%;
+	display: flex;
+	justify-content: space-around;
+}
+
+ul.sk-points li {
+	font-size: 45px;
+	padding-left: 0;
+	text-shadow: 0 0 1.8px white;
+}	
+	.css-one,
+	.css-two,
+	.css-three {
+		color: #f5f058;
+		border-color: white;
+	}
+	.css-four,
+	.css-five {
+		opacity: 1;            
+		color: rgba(0, 0, 0, 0.65);
+	}
+
 
 
 
