--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1765,7 +1765,10 @@ input, select, textarea {
 		.card #ptagcontact {
 			font-size: 15px;
 		}
-
+		.sk-container img {
+			width: 10px;
+			height: 10px;
+		}
 
 	}
 
@@ -1781,9 +1784,9 @@ input, select, textarea {
 }
 
 .sk-container img {
-	width: 60px;
-	height: 60px;
-	padding-left: 0;
+	width: 70px;
+	height: 70px;
+	padding-left: .5rem;
 	display: flex;
 	align-self: center;
 }
@@ -1793,12 +1796,12 @@ ul.sk-points {
 	width: 100%;
 	display: flex;
 	justify-content: space-evenly;
-	padding-left: .8rem;
-	padding-right: .8rem;
+	padding-left: .5rem;
+	padding-right: .5rem;
 }
 
 ul.sk-points li {
-	font-size: 40px;
+	font-size: 45px;
 	padding-left:0;
 	text-shadow: 0 0 1.8px white;
 }	
@@ -1806,7 +1809,7 @@ ul.sk-points li {
 	.css-two,
 	.css-three,
 	.css-four {
-		color: #ebeb35;
+		color: #e5e57f;
 	}
 	.css-five,
 	.css-six{
@@ -1816,7 +1819,55 @@ ul.sk-points li {
 	}
 .sk-result {
 	margin-bottom: 0;
+	padding-right: .5rem;
+	text-transform: uppercase;
 }
+
+@media screen and (max-width:1680px) {
+	.sk-container img {
+		width: 60px;
+		height: 60px;
+	}
+	ul.sk-points li {
+		font-size: 35px;
+	}
+	.sk-result {
+		font-size: 16px;
+	}	
+}
+
+@media screen and (max-width:700px) {
+	.sk-container img {
+		width: 50px;
+		height: 50px;
+	}
+	.ul-sk-points {
+		padding-left: 0;
+		padding-right: 0;
+	}
+	ul.sk-points li {
+		font-size: 30px;
+	}
+	.sk-result {
+		font-size: 13px;
+	}	
+}
+
+@media screen and (max-width:420px) {
+	.sk-container img {
+		width: 40px;
+		height: 40px;
+		padding-left: 0;
+	}
+	ul.sk-points li {
+		font-size: 20px;
+	}
+	.sk-result {
+		font-size: 12px;
+		padding-right: 0;
+	}	
+}
+
 
 
 
