--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1780,12 +1780,12 @@ input, select, textarea {
 	flex-flow: row nowrap;
 	justify-content: space-between;
 	align-items: center;
-	padding: 15px 0 15px 0;
+	padding: 15px 60px 15px 60px;
 }
 
 .sk-container img {
-	width: 70px;
-	height: 70px;
+	width: 50px;
+	height: 50px;
 	padding-left: .5rem;
 	display: flex;
 	align-self: center;
@@ -1801,7 +1801,7 @@ ul.sk-points {
 }
 
 ul.sk-points li {
-	font-size: 45px;
+	font-size: 30px;
 	padding-left:0;
 	text-shadow: 0 0 1.8px white;
 }	
@@ -1809,7 +1809,7 @@ ul.sk-points li {
 	.css-two,
 	.css-three,
 	.css-four {
-		color: #e5e57f;
+		color: #fff;
 	}
 	.css-five,
 	.css-six{
@@ -1820,16 +1820,15 @@ ul.sk-points li {
 .sk-result {
 	margin-bottom: 0;
 	padding-right: .5rem;
-	text-transform: uppercase;
 }
 
 @media screen and (max-width:1680px) {
 	.sk-container img {
-		width: 60px;
-		height: 60px;
+		width: 40px;
+		height: 40px;
 	}
 	ul.sk-points li {
-		font-size: 35px;
+		font-size: 23px;
 	}
 	.sk-result {
 		font-size: 16px;
@@ -1838,18 +1837,18 @@ ul.sk-points li {
 
 @media screen and (max-width:700px) {
 	.sk-container img {
-		width: 50px;
-		height: 50px;
+		width: 35px;
+		height: 35px;
 	}
 	.ul-sk-points {
 		padding-left: 0;
 		padding-right: 0;
 	}
 	ul.sk-points li {
-		font-size: 30px;
+		font-size: 22px;
 	}
 	.sk-result {
-		font-size: 13px;
+		font-size: 15px;
 	}	
 }
 
