--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1771,10 +1771,95 @@ input, select, textarea {
 		}
 
 	}
+/*YouTube Skill Section with bars*/
+.skills {
+	list-style: none;
+	width: 100%;
+}
+
+.skills li {
+	margin: 20px 0;
+}
+
+.bar {
+	background: #353b48;
+	display: block;
+	height: 5px;
+	border: 1px solid rgba(0,0,0,0.3);
+	border-radius: 3px;
+	overflow: hidden;
+	box-shadow: 0 0 10px #2187e7b3;
+}
+
+.bar span {
+	height: 5px;
+	float: left;
+	background: #2187e7;
+}
+
+.html {
+	width: 90%;
+	animation: html 2s;
+}
+
+.css {
+	width: 65%;
+	animation: css 2s;
+}
+
+.javascript {
+	width: 25%;
+	animation: javascript 2s;
+}
+
+.jquery {
+	width: 45%;
+	animation: jquery 2s;
+}
+
+@keyframes html {
+	0% {
+		width: 0%;
+	}
+	100% {
+		width: 90%;
+	}
+}
+
+@keyframes css {
+	0% {
+		width: 0%;
+	}
+	100% {
+		width: 65%;
+	}
+}
+
+@keyframes javascript {
+	0% {
+		width: 0%;
+	}
+	100% {
+		width: 25%;
+	}
+}
+
+@keyframes jquery {
+	0% {
+		width: 0%;
+	}
+	100% {
+		width: 45%;
+	}
+}
+
+
+
+
 
 /*Skills - My edits*/
 /*2nd Rough Draft Skill Bar*/
-.sk-container {
+/*.sk-container {
 	width: 100%;
 	display: flex;
 	flex-flow: row nowrap;
@@ -1865,7 +1950,7 @@ ul.sk-points li {
 		font-size: 12px;
 		padding-right: 0;
 	}	
-}
+}*/
 
 
 
